--- a/src/index.jade
+++ b/src/index.jade
@@ -40,6 +40,7 @@ head
 
 
     script(src='lib/jquery/jquery-1.7.2.js')
+    script(src='lib/underscore/underscore-1.3.3.js')
     script(src='lib/bootstrap/bootstrap-2.0.2.js')
     script(src='lib/d3/d3.v2.js')
     script(src='lib/angular/angular.js')
