--- a/src/index.jade
+++ b/src/index.jade
@@ -1,5 +1,5 @@
 !!! 5
-html(lang='en', ng-app='tvAuction')
+html(lang='en', ng-app='tvAuction', ng-csp)
 head
     meta(charset='utf-8')
     title Tv Auction
