--- a/src/partials/campaignCreate.jade
+++ b/src/partials/campaignCreate.jade
@@ -38,7 +38,7 @@ h2
             span.add-on Impr.
   .span2.info
     ul.nopoints
-      li: a change target
+      li: a(href="#/campaign/create/targetTweak") details / change target
 
 
 // advert
