almost working graph2

--- a/src/less/app.less
+++ b/src/less/app.less
@@ -108,4 +108,8 @@ input[type=number]::-webkit-outer-spin-button {
 		stroke: white;
 		fill-opacity: .125;
 	}
+	rect {
+		stroke: white;
+		fill: lightblue;
+	}
 }
