--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,5 +1,6 @@
 @info: grey;
 @field-selected: #afb;
+@field-notselected: silver;
 
 
 h1 {
@@ -87,11 +88,6 @@ input[type=number]::-webkit-outer-spin-button {
 .targettweaks {
 	height: 350px;
 	width: 100%;
-	.chart {
-		fill: tranparent;
-		width: 100%;
-		overflow: scroll;
-	}
 	.axis text {
 	  font: 10px sans-serif;
 	}
@@ -109,7 +105,36 @@ input[type=number]::-webkit-outer-spin-button {
 		fill-opacity: .125;
 	}
 	rect {
-		stroke: white;
 		fill: lightblue;
+		fill-opacity: .5;
+	}
+	rect.active {
+		fill-opacity: 1.0;
+	}
+	rect.forced {
+		fill-opacity: 1.5;
+	}
+}
+.campaigncalendar {
+	height: 400px;
+	width: 100%;
+	.axis text {
+	  font: 10px sans-serif;
+	}
+
+	.axis path, .axis line {
+		fill: none;
+		stroke: grey;
+		shape-rendering: crispEdges;
+	}
+	rect.slot {
+		stroke: grey;
+		fill: @field-notselected;
+		fill-opacity: 0.5;
+	}
+
+	rect.slot.active {
+		fill-opacity: 1;
+		fill: @field-selected;
 	}
 }
