--- a/src/partials/campaignCreate.jade
+++ b/src/partials/campaignCreate.jade
@@ -168,12 +168,15 @@ h2
   span.info Choose to save, publish, or reset the campaign
 
 .row
-  .span9
-    button.btn.btn-primary.btn-large
-      i.icon-ok.icon-white
+  .span9(style="text-align:right;")
+    button.btn.btn-large
+      i.icon-ok
       |  Save Campaign
     button.btn.btn-large
-      i.icon-trash
+      i.icon-share
+      |  Publish
+    button.btn.btn-large.btn-danger
+      i.icon-trash.icon-white
       |  Reset
 
 hr
