--- a/src/less/app.less
+++ b/src/less/app.less
@@ -1,6 +1,7 @@
 @info: grey;
 @field-selected: #afb;
 @field-notselected: silver;
+@field-forced: green;
 
 
 h1 {
@@ -74,7 +75,7 @@ input[type=number]::-webkit-outer-spin-button {
 		}
 		rect.field {
 			stroke: white;
-			fill: lightblue;
+			fill: @field-selected;
 		}
 		rect.selecting {
 			opacity: 0.8;
@@ -98,21 +99,20 @@ input[type=number]::-webkit-outer-spin-button {
 		shape-rendering: crispEdges;
 	}
 	path {
-		fill: lightblue;
+		fill: @field-selected;
 	}
 	.brush .extent {
 		stroke: white;
 		fill-opacity: .125;
 	}
 	rect {
-		fill: lightblue;
-		fill-opacity: .5;
+		fill: @field-notselected;
 	}
 	rect.active {
-		fill-opacity: 1.0;
+		fill: @field-selected;
 	}
 	rect.forced {
-		fill-opacity: 1.5;
+		fill: @field-forced;
 	}
 }
 .campaigncalendar {
@@ -136,5 +136,8 @@ input[type=number]::-webkit-outer-spin-button {
 	rect.slot.active {
 		fill-opacity: 1;
 		fill: @field-selected;
+	}
+	rect.slot.forced {
+		fill: @field-forced;
 	}
 }
