divided graphs from directives, createCampaign improvements

--- a/src/index.jade
+++ b/src/index.jade
@@ -49,3 +49,4 @@ head
     script(src='js/controllers.js')
     script(src='js/filters.js')
     script(src='js/directives.js')
+    script(src='js/graphs.js')
