--- a/src/less/app.less
+++ b/src/less/app.less
@@ -135,3 +135,11 @@ input[type=number]::-webkit-outer-spin-button {
 		fill: @field-forced;
 	}
 }
+.slcontainer {
+	height: 300px;
+	ul {
+		list-style-type: none;
+		padding: 0px;
+		margin: 0px;
+	}
+}
