first login unit tests, first steps in middleware

--- a/public_src/index.jade
+++ b/public_src/index.jade
@@ -10,7 +10,7 @@ head
     .navbar
       .navbar-inner
         .container
-          a.brand(href='#') Bla
+          a.brand(href='#/') TvAuction
           ul.nav
             li.active: a(href='#') Blabla
     .row
