first steps in e2e testing

--- a/public_src/partials/userLogin.jade
+++ b/public_src/partials/userLogin.jade
@@ -7,7 +7,7 @@ h2
   strong Invalid Credentials
   Your email/password combination is invalid.
 
-form.form-horizontal(ng-submit="login()")
+form.form-horizontal#user-login-form(ng-submit="login()")
   .control-group
     label.control-label email
     .controls
