--- a/public_src/index.jade
+++ b/public_src/index.jade
@@ -18,12 +18,10 @@ head
       .span3
         ul.nav.nav-list
           li.nav-header Campaigns
-          li: a(ng-href='#/campaign/list/active') List Active Campaigns
-          li: a(ng-href='#/campaign/list/finished') List Finished Campaigns
-          li: a(ng-href='#/campaign/new') Create Campaign
+          li: a(ng-href='#/campaign') List Campaigns
 
           li.nav-header Auctions
-          li: a(ng-href='#/auction/list') List Auctions
+          li: a(ng-href='#/auction') List Auctions
 
           li.nav-header Adverts
           li: a(ng-href='#/advert/create') Import Advert
