--- a/public_src/less/app.less
+++ b/public_src/less/app.less
@@ -135,6 +135,22 @@ input[type=number]::-webkit-outer-spin-button {
 		fill: @field-forced;
 	}
 }
+.auctionreach {
+    height: 400px;
+    width: 100%;
+	.axis text {
+	  font: 10px sans-serif;
+	}
+	.axis path, .axis line {
+		fill: none;
+		stroke: grey;
+		shape-rendering: crispEdges;
+	}
+    path {
+        fill: none;
+        stroke: red;
+    }
+}
 .slcontainer {
 	height: 300px;
 	ul {
@@ -143,3 +159,4 @@ input[type=number]::-webkit-outer-spin-button {
 		margin: 0px;
 	}
 }
+
