--- a/public_src/partials/campaignDetailCalendar.jade
+++ b/public_src/partials/campaignDetailCalendar.jade
@@ -2,4 +2,4 @@ h1 Create Campaign - Details
 h2
   | Calendar
   span.info You can assign indiviudal slots here
-.campaigncalendar(campaigncalendar,ng-model='campaign.slots')
+.campaigncalendar(campaigncalendar, ng-model='campaign.content.slots')
