--- a/public_src/partials/campaignDetailTargetTweak.jade
+++ b/public_src/partials/campaignDetailTargetTweak.jade
@@ -3,10 +3,10 @@ h2
   | Target values
   span.info Drag the slider in the lower area and change the value by clicking on the bars.
 
-.targettweaks(targettweaks,ng-model="campaign.slots")
+.targettweaks(targettweaks,ng-model="campaign.content.slots")
 
 .row
   .span7
     | bla
   .span1(style="text-align:right;")
-    a(href="#/campaign/create") back
+    a(href="#/campaign/resume") back
