--- a/public_src/partials/campaignDetail.jade
+++ b/public_src/partials/campaignDetail.jade
@@ -8,38 +8,30 @@ h2
     label Campaign name
   .span3
     input.span2(type="text",ng-model="campaign.name",required)
-  .span4.info.right
-    a Clone existing campaign
 
+h2
+  | Targets
+  span.info Please specifiy your desired targets and their respective maximum budgets.
 .row
+  .span7
+    table.table.table-condensed
+      thead
+        tr
+          th target quantity
+          th maximum budget
+          th &nbsp;
+      tbody
+        tr
+          td: input.input-medium(ng-model="campaign.target.quantity", type="number", min="0", required)
+          td
+            .input-append
+              input.input-medium(type="number", min="{{campaign.minBudget()}}", step="100", ng-model="campaign.budget", required)
+              span.add-on &euro;
+          td
+            a.btn.btn-link: i.icon-plus
   .span2
-    label Maximum Budget
-  .span3
-      .control-group
-        .controls
-          .input-append
-            input.span2.input-medium(type="number", min="{{campaign.minBudget()}}", step="100", ng-model="campaign.budget", required)
-            span.add-on &euro;
-  .span2.info
-    ul.nopoints
-      li minimum: {{campaign.minBudget()}} &euro;
-      li
-        | suggested: {{campaign.suggestedBudget()}} &euro; 
-        a(ng-click="campaign.budget = campaign.suggestedBudget()", ng-show="campaign.budget < campaign.suggestedBudget()") use
-.row
-  .span2
-    label Target: 
-      strong {{campaign.target.type}}
-  .span3
-      .control-group
-        .controls
-          .input-append
-            input.span2.input-medium(ng-model="campaign.target.quantity", type="number", min="0", required)
-            span.add-on Impr.
-  .span2.info
-    ul.nopoints
-      li: a(href="#/campaign/targetTweak") details / change target
-
+    span.info.pull-right
+      a(href="#/campaign/targetTweak") details / change target
 
 // advert
 h2
@@ -63,9 +55,7 @@ h2
   .span3
     img(ng-src="{{campaign.advert.thumb}}")
   .span1.info.right
-    a Change
-
-
+    a change
 
 
 // auction
@@ -77,7 +67,7 @@ h2
   .span5
     h4 
       | Auction # {{auction.id}}
-      span.info 2012-01-02 to 2012-01-15
+      span.info {{auction.from | date}} - {{auction.to | date}}
     table.table.table-condensed
       thead
         tr
