--- a/public_src/partials/campaignDetailTargetTweak.jade
+++ b/public_src/partials/campaignDetailTargetTweak.jade
@@ -5,8 +5,9 @@ h2
 
 .targettweaks(targettweaks,ng-model="campaign.content.slots")
 
-.row
-  .span7
-    | bla
-  .span1(style="text-align:right;")
-    a(href="#/campaign/resume") back
+dl.dl-horizontal.pull-right
+  .form-horizontal
+    .control-group
+      label.control-label target audience
+      .controls
+        select(ng-change="confirmReachChange()", ng-model="reach_active", ng-options="v.name for v in reaches")
