--- a/public_src/partials/slotPopup.jade
+++ b/public_src/partials/slotPopup.jade
@@ -11,17 +11,13 @@ form
       td: ul
         li(ng-repeat="category in slot.categories") {{category}}
     tr
-      th Price
-      th &nbsp;
+      th(colspan="2") Price
     tr
       td(colspan="2") {{slot.price*30 | number:2}} &euro; / 30s
     tr
-      th Target
-      th Reach
+      th(colspan="2") Target
     tr
-      td(style="padding-top:10px;") 
+      td(colspan="2",style="padding-top:10px;") 
         input.input.input-mini(type="number", ng-model="input.target")
-      td(style="padding-top:10px;") 
-        input.input.input-mini(type="text", disabled="disabled", value="{{slot.reach}}")
   button.button(ng-click="saveInput()") Save
   button.button(ng-click="closePopup()") Close
