--- a/public_src/partials/campaignDetailTargetTweak.jade
+++ b/public_src/partials/campaignDetailTargetTweak.jade
@@ -11,3 +11,4 @@ dl.dl-horizontal.pull-right
       label.control-label target audience
       .controls
         select(ng-change="confirmReachChange()", ng-model="reach_active", ng-options="v.name for v in reaches")
+            option(value="") custom
