--- a/public_src/index.jade
+++ b/public_src/index.jade
@@ -12,7 +12,7 @@ head
         .container
           a.brand(ng-href='#/') TvAuction
           ul.nav
-            li.active: a(href='#') Blabla
+            li: a(href='#')
     .row
       // left side menu
       .span3
@@ -22,10 +22,6 @@ head
 
           li.nav-header Auctions
           li: a(ng-href='#/auction') List Auctions
-
-          li.nav-header Adverts
-          li: a(ng-href='#/advert/create') Import Advert
-          li: a(ng-href='#/advert/list') Manage Adverts
 
           li.nav-header Support
           li: a(ng-href='#/help') Help
