popups working again nicely

--- a/public_src/index.jade
+++ b/public_src/index.jade
@@ -1,5 +1,5 @@
 !!! 5
-html(lang='en', ng-app='tvAuction', ng-csp)
+html(lang='en', ng-app='tvAuction')
 head
     meta(charset='utf-8')
     title Tv Auction
