--- a/public_src/partials/campaignDetailTargetTweak.jade
+++ b/public_src/partials/campaignDetailTargetTweak.jade
@@ -10,5 +10,5 @@ dl.dl-horizontal.pull-right
     .control-group
       label.control-label target audience
       .controls
-        select(ng-change="confirmReachChange()", ng-model="reach_active", ng-options="v.name for v in reaches")
+        select(ng-change="confirmReachChange()", ng-model="reach_active", ng-options="v.name for v in reaches", ng-disabled="auction.isLocked()")
             option(value="") custom
