--- a/public_src/partials/auction.jade
+++ b/public_src/partials/auction.jade
@@ -19,8 +19,9 @@ table.table.table-bordered
     td {{auction.deadline | date}}
     td {{auction.from | date}}
     td {{auction.to | date}}
-    td(ng-show="auction.campaign_id")
-      a(ng-href="#/campaign/edit/{{auction.id}}") edit
-    td(ng-hide="auction.campaign_id")
-      a(ng-href="#/campaign/edit/{{auction.id}}") create
+    td
+      a(ng-href="#/campaign/edit/{{auction.id}}") 
+        span(ng-show="auction.deadline > now && !auction.campaign_id") create
+        span(ng-show="auction.deadline > now && auction.campaign_id") edit
+        span(ng-show="auction.deadline <= now && auction.campaign_id") view
 
