added ui-bootstrap, multiple ui improvements

--- a/public_src/partials/auction.jade
+++ b/public_src/partials/auction.jade
@@ -2,7 +2,7 @@ h1 Auction
 
 h2
   | Auction List
-  span.info all currently active auctions and auctions on which you already bid
+  span.info all currently active auctions and auctions on which you have bid
 
 
 table.table.table-bordered
