--- a/public_src/partials/index.jade
+++ b/public_src/partials/index.jade
@@ -9,4 +9,4 @@
     |  care about, for a price you are satisfied with.
   a.btn.btn-large.btn-primary(href="#/user/login") Log in
   |  
-  a.btn.btn-large(href="#/help/introduction") Learn more
+  a.btn.btn-large(href="#/help") Learn more
