--- a/public_src/index.jade
+++ b/public_src/index.jade
@@ -25,6 +25,11 @@ head
 
           li.nav-header Support
           li: a(ng-href='#/help') Help
+
+          li.nav-header User
+          li: a(ng-href='#/user/login') Log In
+          li: a(ng-href='#/user/logout') Log Out
+
       .span9
         div(ng-view)
 
@@ -33,6 +38,7 @@ head
     script(src='lib/bootstrap/bootstrap-2.1.1.js')
     script(src='lib/d3/d3.v2.js')
     script(src='lib/angular/angular.js')
+    script(src='lib/angular-ui-bootstrap/ui-bootstrap-tpls-0.1.0.js')
     script(src='js/app.js')
     script(src='js/services.js')
     script(src='js/controllers.js')
