--- a/public_src/less/app.less
+++ b/public_src/less/app.less
@@ -160,3 +160,9 @@ input[type=number]::-webkit-outer-spin-button {
 	}
 }
 
+
+// angular-ui
+.modal-header h1 {
+	font-size: 1.1em;
+	line-height: 1.1em;
+}
