--- a/public_src/partials/auctionView.jade
+++ b/public_src/partials/auctionView.jade
@@ -16,12 +16,24 @@ dl.dl-horizontal
 
 h2
   | Reach
-  span.info forecasted reach per slot (choose a target group in the drop down list)
+  span.info Forecasted reach per slot (choose a target group in the drop down list)
 .auctionreach(auctionreach, auction-start="auction.from", auction-end="auction.to", reach="reach_active.content.slot_reaches", slots="auction.content.slots")
 
-dl.dl-horizontal.pull-right
-  .form-horizontal
-    .control-group
-      label.control-label target audience
-      .controls
-        select(ng-model="reach_active", ng-options="v.name for v in reaches")
+.row
+  .span9(style="text-align:right;")
+    dl.dl-horizontal.pull-right
+      .form-horizontal
+        .control-group
+          label.control-label target audience
+          .controls
+            select(ng-model="reach_active", ng-options="v.name for v in reaches")
+
+h2
+  | Actions
+  span.info You can save your changes after returning to your campaign.
+.row
+  .span9(style="text-align:right;")
+    a.btn.btn-large(ng-href="#/auction")
+      i.icon-arrow-up
+      |  Return To Auctions
+hr
