--- a/public_src/partials/userLogin.jade
+++ b/public_src/partials/userLogin.jade
@@ -3,9 +3,15 @@ h2
   | Login
   span.info Please insert your email and password
 
+.alert(ng-show="alreadyLoggedIn")
+  strong Already Logged In
+  |  You are already logged in. 
+  a(ng-href="#/campaign") Go to your campaigns
+
 .alert(ng-show="credentialsInvalid")
   strong Invalid Credentials
   |  Your email/password combination is invalid.
+
 
 form.form-horizontal#user-login-form(ng-submit="login()")
   .control-group
