--- a/public_src/less/app.less
+++ b/public_src/less/app.less
@@ -41,6 +41,10 @@ h2, h4 {
 	text-align:right;
 }
 
+.center {
+	float: none; margin-left: auto; margin-right: auto; 
+}
+
 table {
 	border-size: 1px;
 }
@@ -51,7 +55,9 @@ ul.nopoints {
 	margin: 0px;
 }
 
-
+ul.breadcrumb {
+	font-size: 1.2em;
+}
 
 // no wheel in input type number
 input[type=number]::-webkit-inner-spin-button,
