--- a/public_src/partials/result.jade
+++ b/public_src/partials/result.jade
@@ -1,4 +1,5 @@
-h1 Campaign - Results
+div(breadcrumb, breadcrumbs="breadcrumbs")
+  
 h2
   | Bids
   span.info Information about submitted and won bids
