--- a/public_src/partials/userLogout.jade
+++ b/public_src/partials/userLogout.jade
@@ -1,4 +1,4 @@
-h2 Log out
+div(breadcrumb, breadcrumbs="breadcrumbs")
 
 .alert.alert-error(ng-show="successful==false")
   strong communication error
