--- a/public_src/partials/campaignDetailCalendar.jade
+++ b/public_src/partials/campaignDetailCalendar.jade
@@ -1,4 +1,5 @@
-h1 Edit Campaign - Details
+div(breadcrumb, breadcrumbs="breadcrumbs")
+
 h2
   | Calendar
   span.info You can assign indiviudal slots here. Zoom and drag with your mouse.
