--- a/public_src/partials/campaignDetailTargetTweak.jade
+++ b/public_src/partials/campaignDetailTargetTweak.jade
@@ -1,4 +1,5 @@
-h1 Edit Campaign - Target
+div(breadcrumb, breadcrumbs="breadcrumbs")
+  
 h2
   | Target values
   span.info Drag the slider in the lower area and change the value by clicking on the bars.
